Began implementing JWT Authentication and changed file structure